--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,13 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'food/style.css' %}" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
 </head>
 <body>
+    <nav class="navbar nav-dark bg-dark">
+        <a href="#" class="navbar-brand">FoodApp</a>
+
+        <div class="navbar">
+            <a class="nav-item nav-link" href="#">Home</a>
+            <a class="nav-item nav-link" href="#">edit</a>
+            <a class="nav-item nav-link" href="#">delete</a>
+            <a class="nav-item nav-link" href="#">post</a>
+        </div>
+    </nav>
     {% for i in item_list %}
     <ul>
-        <li>{{ i.id }}</li> 
-        <li>{{ i.item_name }}</li>
+        <a href="{% url 'details' i.id %}">{{ i.id }}--{{ i.item_name }}</a>
     </ul>
     {% endfor %}
+
 </body>
 </html>
