--- a/food/templates/food/details.html
+++ b/food/templates/food/details.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>details</title>
-</head>
-<body>
-    <h1>{{ item.item_name }}</h1>
-    <h4>{{ item.item_desc }}</h4>
-    <span>{{ item.item_price }}</span>
-</body>
-</html>
+{% extends 'food/base.html' %}
+{% block body %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="{{ item.item_image }}" height="300px" alt="{{ item.item_name }}" class="card" />
+            </div>
+            <div class="col-md-6">
+                <h1>{{ item.item_name }}</h1>
+                <h4>{{ item.item_desc }}</h4>
+                <span>${{ item.item_price }}</span>
+                <a href="{% url 'food:delete_item' item.id %}">delete</a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
