--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,31 +1,19 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'food/style.css' %}" >
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% extends 'food/base.html' %}
 
-</head>
-<body>
-    <nav class="navbar nav-dark bg-dark">
-        <a href="#" class="navbar-brand">FoodApp</a>
-
-        <div class="navbar">
-            <a class="nav-item nav-link" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">edit</a>
-            <a class="nav-item nav-link" href="#">delete</a>
-            <a class="nav-item nav-link" href="#">post</a>
-        </div>
-    </nav>
-    {% for i in item_list %}
-    <ul>
-        <a href="{% url 'details' i.id %}">{{ i.id }}--{{ i.item_name }}</a>
-    </ul>
-    {% endfor %}
-
-</body>
-</html>
+    {% block body %}
+        {% for i in item_list %}
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="card" height="200px" src="{{i.item_image}}" alt="{{i.item_name}}" />
+                </div>
+                <div class="col-md-6">
+                        <h4>{{ i.item_name }}</h4>
+                        <h5>{{i.item_desc}}</h5>
+                        <span>${{i.item_price}}</span>
+                </div>
+                <div class="col-md-2">
+                    <a href="{% url 'food:details' i.id %}"><button class="btn btn-success">details</button></a>
+                </div>
+            </div>
+        {% endfor %}
+    {% endblock %}
