--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -16,7 +16,12 @@
             <a class="nav-item nav-link" href="{% url 'food:create_item' %}">add-item</a>
             <a class="nav-item nav-link" href="#">delete-item</a>
             <a class="nav-item nav-link" href="#">view-item</a>
-            
+            {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'profile' %}">Profile</a>
+            {% else %}
+                <a href="{% url "login" %}">Login</a>
+            {% endif %}
         </div>
     </nav>
     {% if messages %}
