--- a/food/templates/food/item-forms.html
+++ b/food/templates/food/item-forms.html
@@ -1,9 +1,32 @@
 {% extends 'food/base.html' %}
 
 {% block body %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">save</button>
-</form>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="card">
+                <div class="card-header text-white text-center bg-info">
+                    <div classnaclassme="card-title">
+                        Login
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            <div class="form-group">
+                                {{ field.name }}
+                                <br>
+                                {{ field }}
+                            </div>
+                        {% endfor %} <br />
+                        <button class="btn-info" type="submit">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
