--- a/user/templates/users/register.html
+++ b/user/templates/users/register.html
@@ -1,5 +1,32 @@
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">create</button>
-</form>
+{% extends 'food/base.html' %}
+
+{% block body %}
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 offset-md-4">
+			<div class="card">
+				<div class="card-header text-white text-center bg-info">
+					<div class="card-title">
+						Registration
+					</div>
+				</div>
+				<div class="card-body">
+					<form method="POST">
+					    {% csrf_token %}
+					    {% for field in form %}
+					    	<div class="form-group">
+					    		{{ field.name }}
+					    		<br>
+							    {{ field }}
+					    	</div>
+					    {% endfor %}<br>
+					    <button class="btn-info" type="submit">Register</button>
+					</form>
+				</div>
+			</div>
+		</div>	
+	</div>
+</div>
+
+{% endblock %}
